--- a/_posts/2023-02-12-PQ-留在香港的抗爭者-候鳥-候-鳥.html
+++ b/_posts/2023-02-12-PQ-留在香港的抗爭者-候鳥-候-鳥.html
@@ -9,123 +9,46 @@ author: 陳怡菱
 ---
 
 <p class="pqnote">編按：文章出自《產經新聞》「それでも香港に生きる（儘管如此還是要在香港活下去）」系列報導第 ② 篇。</p>
-
-
-
 <p>第 ① 篇：<a href="https://www.pourquoi.tw/still-live-in-hong-kong-1/" target="_blank" rel="noopener">留在香港的抗爭者》我們的抗爭沒有意義嗎？</a></p>
-
-
-
 <p>那是發生在去（2022）年聖誕節早上的事。香港九龍地區的荔枝角收押所，有許多人排隊等著探視親友。早上 10 點多，大約 20 來個人完成手續，身影漸逝在鐵網中。頭上飛過兩隻鴿子。</p>
-
-
-
 <p>這個收押所主要收容著那些被還押、等候判決的疑犯。也有許多在 2019 年香港民主化運動中被逮捕的青年。</p>
-
-
-
 <p>基本上，等候判決的疑犯只允許一天 1 次 15 分鐘的探訪，而被定罪者則只有一個月 2 次各 30 分鐘。慰問用的筆、記事本、牙刷、內褲、毛巾和生理用品等也受到限制，甚至有些<a href="https://www.csd.gov.hk/tc_chi/socialvisit/socialvisit_articles/ins_vis_guide_handin_articles.html" target="_blank" rel="noopener">物品</a>只認可現在在市面上難以買到的品牌。</p>
-
-
-
-<div class="wp-block-jetpack-slideshow aligncenter" data-effect="slide"><div class="wp-block-jetpack-slideshow_container swiper-container"><ul class="wp-block-jetpack-slideshow_swiper-wrapper swiper-wrapper"><li class="wp-block-jetpack-slideshow_slide swiper-slide"><figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-127054" data-id="127054" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/f13c162c-44da8d1b-7f2d-4280-87c2-dbeea3758f70.jpeg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/f13c162c-44da8d1b-7f2d-4280-87c2-dbeea3758f70.jpeg 675w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/f13c162c-44da8d1b-7f2d-4280-87c2-dbeea3758f70-275x300.jpeg 275w" sizes="(max-width: 675px) 100vw, 675px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">香港懲戒署提供的物資清單，親屬只能按照清單購買指定品牌及款式。（圖／截自香港懲戒署）</figcaption></figure></li><li class="wp-block-jetpack-slideshow_slide swiper-slide"><figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-127053" data-id="127053" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-1024x683.jpeg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-1024x683.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-768x513.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9.jpeg 1440w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">香港懲戒署認可交來物品，有些品牌在市面上已難以買到。（圖／候鳥）</figcaption></figure></li></ul><a class="wp-block-jetpack-slideshow_button-prev swiper-button-prev swiper-button-white" role="button"></a><a class="wp-block-jetpack-slideshow_button-next swiper-button-next swiper-button-white" role="button"></a><a aria-label="Pause Slideshow" class="wp-block-jetpack-slideshow_button-pause" role="button"></a><div class="wp-block-jetpack-slideshow_pagination swiper-pagination swiper-pagination-white"></div></div></div>
-
-
-
+<div class="wp-block-jetpack-slideshow aligncenter" data-effect="slide">
+<div class="wp-block-jetpack-slideshow_container swiper-container">
+<ul class="wp-block-jetpack-slideshow_swiper-wrapper swiper-wrapper">
+<li class="wp-block-jetpack-slideshow_slide swiper-slide">
+<figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-127054" data-id="127054" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/f13c162c-44da8d1b-7f2d-4280-87c2-dbeea3758f70.jpeg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/f13c162c-44da8d1b-7f2d-4280-87c2-dbeea3758f70.jpeg 675w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/f13c162c-44da8d1b-7f2d-4280-87c2-dbeea3758f70-275x300.jpeg 275w" sizes="(max-width: 675px) 100vw, 675px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">香港懲戒署提供的物資清單，親屬只能按照清單購買指定品牌及款式。（圖／截自香港懲戒署）</figcaption></figure>
+</li>
+<li class="wp-block-jetpack-slideshow_slide swiper-slide">
+<figure><img loading="lazy" alt="" class="wp-block-jetpack-slideshow_image wp-image-127053" data-id="127053" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-1024x683.jpeg" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-1024x683.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9-768x513.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/955b7236-c72049f1-392d-470c-83cc-8afa16dda4d9.jpeg 1440w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption class="wp-block-jetpack-slideshow_caption gallery-caption">香港懲戒署認可交來物品，有些品牌在市面上已難以買到。（圖／候鳥）</figcaption></figure>
+</li>
+</ul>
+<p><a class="wp-block-jetpack-slideshow_button-prev swiper-button-prev swiper-button-white" role="button"></a><a class="wp-block-jetpack-slideshow_button-next swiper-button-next swiper-button-white" role="button"></a><a aria-label="Pause Slideshow" class="wp-block-jetpack-slideshow_button-pause" role="button"></a></p>
+<div class="wp-block-jetpack-slideshow_pagination swiper-pagination swiper-pagination-white"></div>
+</div>
+</div>
 <h3>候鳥</h3>
-
-
-
 <p>有一個民間業者提供了物資代辦服務「<a href="https://www.facebook.com/waitingbirdhk/" target="_blank" rel="noopener">候鳥</a>」，代替一般民眾購買不容易分辨「什麼可以什麼不行」的慰問品。他們也有提供服務熱線接受各種諮詢。</p>
-
-
-
 <p>候鳥是指「會遷徙的鳥類」，但「候」也是「等候」。這項服務由民間業者「如一」所成立，去年 2 月啟動候鳥服務的民主運動人士朱江瑋（45 歲）做了說明。</p>
-
-
-
 <p>「每當探訪牆內手足的時候，步出圍牆外都有鳥飛過。感覺就好像鳥群在等手足出監⋯⋯」</p>
-
-
-
 <p>他說也有在等候那些離開香港逃到海外的手足像候鳥般飛回來的意思在。</p>
-
-
-
 <p>2019 年 11 月向警車丟擲汽油彈被逮捕判刑 2 年 3 個月的黎振鴻參加的就是候鳥。他向保釋中的年輕人分享獄中的經驗。</p>
-
-
-
 <p>「牙膏每兩個月 1 支，所以這次沒辦法送進去。」去年 12 月，如一辦公室的工作人員這樣建議來訪的 21 歲女子。她說她要去探訪在 2019 年被逮捕、起訴、被收押在荔枝角收押所的男朋友。</p>
-
-
-
 <p>女子鬆了一口氣地說「可以一次集齊需要的東西真的幫了大忙」。</p>
-
-
-
 <p>據說在 2019 年的抗爭被判刑入獄的青年當中，目前有約 200 人使用了候鳥服務。</p>
-
-
-
 <h3>不靠捐款只做買賣</h3>
-
-
-
 <p>比較不同的是他們也做網路電商。如一鎖定支持民主運動的人為主要客群，販賣咖啡、紅酒和冷凍調理包，將大部分的利潤都投注在候鳥工作中。</p>
-
-
-
-<figure class="wp-block-image size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-1024x1024.jpeg" alt="" class="wp-image-127055" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-1024x1024.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-150x150.jpeg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-768x768.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172.jpeg 1296w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>#HKersWine「回憶中的香港人」紅酒<br>（圖／<a href="https://asonehk.com/products/hkerswine" target="_blank" rel="noopener">如一網購平台 AsOne mall</a>）</figcaption></figure>
-
-
-
+<figure class="wp-block-image size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-1024x1024.jpeg" alt="" class="wp-image-127055" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-1024x1024.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-150x150.jpeg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172-768x768.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/b7907959-00c534fe-09a3-43ec-af24-38e87d02c172.jpeg 1296w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>#HKersWine「回憶中的香港人」紅酒<br />（圖／<a href="https://asonehk.com/products/hkerswine" target="_blank" rel="noopener">如一網購平台 AsOne mall</a>）</figcaption></figure>
 <p>朱江瑋認為「<strong>如果不以商業模式經營，只倚靠志工沒辦法長久</strong>。」</p>
-
-
-
 <p>2019 年之後，有幾個提供被逮捕、在囚人士協助的團體，但朱江瑋說「它們被香港當局盯上，被迫解散。」</p>
-
-
-
 <p>如一為了不經手來路不明的資金而「不接受捐款」，只做買賣。現在成長到賣場有約 500 個品項。</p>
-
-
-
-<figure class="wp-block-image size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited.jpeg" alt="" class="wp-image-127083" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited.jpeg 1596w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-1024x1024.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-150x150.jpeg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-768x768.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-1536x1536.jpeg 1536w" sizes="(max-width: 1596px) 100vw, 1596px" /><figcaption>候鳥不收捐款，可購買「候鳥平安包」由工作人員提供給在囚或還押的抗爭者。<br>（圖／截自<a href="https://asonehk.com/collections/waitingbird?sort_by=created-ascending" target="_blank" rel="noopener">如一網購平台</a>）</figcaption></figure>
-
-
-
+<figure class="wp-block-image size-large is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited.jpeg" alt="" class="wp-image-127083" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited.jpeg 1596w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-1024x1024.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-150x150.jpeg 150w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-768x768.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/40e7247e-228e156c-5209-4338-89dd-97513b30eed7-edited-1536x1536.jpeg 1536w" sizes="(max-width: 1596px) 100vw, 1596px" /><figcaption>候鳥不收捐款，可購買「候鳥平安包」由工作人員提供給在囚或還押的抗爭者。<br />（圖／截自<a href="https://asonehk.com/collections/waitingbird?sort_by=created-ascending" target="_blank" rel="noopener">如一網購平台</a>）</figcaption></figure>
 <p>「和之前不一樣，不是講自己的信念，而是得談到錢，一開始有糾結過」和朱江瑋一起發展事業的民運人士尤思聰（30 歲）這樣說。</p>
-
-
-
 <p>如一 5 位職員的月薪落在 1 萬數千港幣，這在高物價的香港不太容易生活。</p>
-
-
-
 <p>如一的負責人不是民主派的朱江瑋或尤思聰，而是在朱江瑋個人辦公室工作的麥翠兒。</p>
-
-
-
 <p>確實是不想讓當局盯上的話，由沒有民主運動色彩的人來當比較好。</p>
-
-
-
 <p>「可是，我又不起眼，之前也沒有想過要站在前線，或是去參選。只是如果必須要有人來做的話⋯⋯」她因此接下了負責人。</p>
-
-
-
 <p>接下來，不知道還會有什麼災難降臨。在許多民運人士逃往海外的狀況下，朱江瑋和尤思聰都留在香港。</p>
-
-
-
 <p>麥翠兒覺得「就算離開香港得到了自由又有什麼意義呢？」她的夢想到底就是擴大事業。「鞏固基礎很重要。不是說有什麼希望。可是，照現在這樣我們要怎麽迎來下一個『運動』？」</p>
-
-
-
 <p>這肯定和尤思聰克服的「糾結」有相同的意念在。只不過，那樣一來就必須要不斷的增加商品品項，所以現在必須要投注在生意當中，然而，<strong>太引人注目又很危險，這分寸很難拿捏</strong>。</p>
-
-
-
-<p>參考新聞連結：<br><a href="https://www.sankei.com/article/20230118-F6URO7D7DJKMZDADPN6GF3JGBE/" target="_blank" rel="noopener">2023/01/18　産経　「渡り鳥」が届ける囚人支援 故郷離れた自由に「何の意味が…」</a></p><p>The post <a href="https://pourquoi.tw/still-live-in-hong-kong-2/">留在香港的抗爭者》候鳥　候・鳥</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考新聞連結：<br /><a href="https://www.sankei.com/article/20230118-F6URO7D7DJKMZDADPN6GF3JGBE/" target="_blank" rel="noopener">2023/01/18　産経　「渡り鳥」が届ける囚人支援 故郷離れた自由に「何の意味が…」</a></p><p>The post <a href="https://pourquoi.tw/still-live-in-hong-kong-2/">留在香港的抗爭者》候鳥　候・鳥</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
