--- a/_posts/2023-02-12-PQ-華府智庫分析各國對烏態度-澤倫斯基再出訪-烏克蘭是歐洲的一部分.html
+++ b/_posts/2023-02-12-PQ-華府智庫分析各國對烏態度-澤倫斯基再出訪-烏克蘭是歐洲的一部分.html
@@ -9,35 +9,19 @@ author: 王雪俐
 ---
 
 <p>上週烏克蘭總統澤倫斯基訪問歐洲各國，這是去年 2 月 24 日戰爭爆發以來他第二度出訪。他先前往倫敦會晤英國首相蘇納克，之後轉往巴黎會見法國總統馬克宏，又在造訪布魯塞爾歐盟總部。<strong>澤倫斯基在演說中反覆強調，烏克蘭是歐洲的一部分</strong>，也會堅持歐洲價值，他肯定各界對烏克蘭提供極為可觀的援助，卻還不足以擊敗俄羅斯，敦促各國持續向烏克蘭伸出援手。</p>
-
-
-
 <p>對於澤倫斯基此次出訪，華府智庫大西洋理事會（Atlantic Council）刊出一篇文章，分析歐陸幾個大國和歐盟面對烏克蘭的態度。</p>
-
-
-
-<ul><li><strong>英國</strong>：歐洲各國當中，以英國支持烏克蘭最力，這是從前首相強生主政時就定下的基調，且現在英國政界人士都急於表現得比別人更支持烏克蘭。澤倫斯基造訪倫敦後數小時，前首相強生呼籲提供烏克蘭颱風戰鬥機，雖然專家認為這不大可能，至少首相蘇納克發表的正式聲明強調，關於援助烏克蘭，「沒有什麼不可能」。</li></ul>
-
-
-
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg" alt="" class="wp-image-104944" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐洲各國當中，以英國支持烏克蘭最力，這是從前首相強生主政時就定下的基調（圖／@KyivPost）</figcaption></figure>
-
-
-
-<ul><li><strong>法國</strong>：雖然法國總統馬克宏早先頗多猶豫，最近幾週態度有所轉變，提供 AMX 10-RC 裝甲車是一重大決定。法國的聲明中說，他們提供裝甲車是為了鼓勵其他國家也對烏克蘭提供坦克。但這不表示法國真的會提供烏克蘭所期盼的雷克勒主戰車（Leclerc），提供飆風（Rafale）或幻象（Mirage）戰機的可能性也不高。</li></ul>
-
-
-
-<ul><li><strong>德國</strong>：有些觀察家認為，這次澤倫斯基沒有造訪柏林，是刻意怠慢德國政府，但這不符實情。澤倫斯基造訪巴黎時，也見到來訪的德國總理蕭茲。且就軍事和財務援助而言，德國依舊領先歐盟其他國家。澤倫斯基選擇去巴黎而不是柏林，「是基於他想要從巴黎獲得些什麼，而不是因為他沒從柏林獲得什麼」。</li></ul>
-
-
-
-<ul><li><strong>歐盟</strong>：觀察家注意到，澤倫斯基訪問華府和倫敦時，都以英語發表演說，但在布魯塞爾，儘管英語是歐盟主要工作語言，他卻選擇以烏克蘭語演說，顯然呼應他極力傳遞給歐盟的訊息：烏克蘭是歐洲的一部分，在美國和英國，他是作客，講東道主的語言，在歐洲卻是回家，當然講自己的語言。</li></ul>
-
-
-
+<ul>
+<li><strong>英國</strong>：歐洲各國當中，以英國支持烏克蘭最力，這是從前首相強生主政時就定下的基調，且現在英國政界人士都急於表現得比別人更支持烏克蘭。澤倫斯基造訪倫敦後數小時，前首相強生呼籲提供烏克蘭颱風戰鬥機，雖然專家認為這不大可能，至少首相蘇納克發表的正式聲明強調，關於援助烏克蘭，「沒有什麼不可能」。</li>
+</ul>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg" alt="" class="wp-image-104944" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/06/8e25f1d7-@kyivpost-768x512.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐洲各國當中，以英國支持烏克蘭最力，這是從前首相強生主政時就定下的基調（圖／@KyivPost）</figcaption></figure>
+<ul>
+<li><strong>法國</strong>：雖然法國總統馬克宏早先頗多猶豫，最近幾週態度有所轉變，提供 AMX 10-RC 裝甲車是一重大決定。法國的聲明中說，他們提供裝甲車是為了鼓勵其他國家也對烏克蘭提供坦克。但這不表示法國真的會提供烏克蘭所期盼的雷克勒主戰車（Leclerc），提供飆風（Rafale）或幻象（Mirage）戰機的可能性也不高。</li>
+</ul>
+<ul>
+<li><strong>德國</strong>：有些觀察家認為，這次澤倫斯基沒有造訪柏林，是刻意怠慢德國政府，但這不符實情。澤倫斯基造訪巴黎時，也見到來訪的德國總理蕭茲。且就軍事和財務援助而言，德國依舊領先歐盟其他國家。澤倫斯基選擇去巴黎而不是柏林，「是基於他想要從巴黎獲得些什麼，而不是因為他沒從柏林獲得什麼」。</li>
+</ul>
+<ul>
+<li><strong>歐盟</strong>：觀察家注意到，澤倫斯基訪問華府和倫敦時，都以英語發表演說，但在布魯塞爾，儘管英語是歐盟主要工作語言，他卻選擇以烏克蘭語演說，顯然呼應他極力傳遞給歐盟的訊息：烏克蘭是歐洲的一部分，在美國和英國，他是作客，講東道主的語言，在歐洲卻是回家，當然講自己的語言。</li>
+</ul>
 <p>參考新聞來源：</p>
-
-
-
 <p><a href="https://www.atlanticcouncil.org/blogs/new-atlanticist/the-view-from-european-capitals-on-zelenskyys-trip-across-the-continent/">2023/02/09 ​ &nbsp; ​Atlantic Council（大西洋理事會）​&nbsp; &nbsp; ​The view from European capitals on Zelenskyy’s trip across the continent</a></p><p>The post <a href="https://pourquoi.tw/intlnews-euaf-230206-230212-1/">華府智庫分析各國對烏態度　澤倫斯基再出訪：烏克蘭是歐洲的一部分</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
