--- a/_posts/2023-02-13-INMEDIA-屯門居民抗議警基地不明氣體洩漏-13人被控非法集結-3人認罪.html
+++ b/_posts/2023-02-13-INMEDIA-屯門居民抗議警基地不明氣體洩漏-13人被控非法集結-3人認罪.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/tm%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年10月30日屯門疑有不明氣體洩漏，區內居民到警方大興行動基地抗議，<a href="https://www.inmediahk.net/node/1068273">遭警方驅散</a>，防暴警更一度進入基地對面的兆軒苑逸生閣，命居民跪地抱頭接受搜查。13人被控非法集結等罪，今（13日）在區域法院開審。其中3人在開審前認罪，他們獲准保釋至3月24日求情。有被告今早因身體不適遲到約半小時，法官謝沈智慧斥被告已違反保釋條件，明言「再有人遲到我撤銷保釋，聽唔聽到？」</p>
+<img src="https://www.inmediahk.net/files/column_images/tm%201280.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>2019年10月30日屯門疑有不明氣體洩漏，區內居民到警方大興行動基地抗議，<a href="https://www.inmediahk.net/node/1068273">遭警方驅散</a>，防暴警更一度進入基地對面的兆軒苑逸生閣，命居民跪地抱頭接受搜查。13人被控非法集結等罪，今（13日）在區域法院開審。其中3人在開審前認罪，他們獲准保釋至3月24日求情。有被告今早因身體不適遲到約半小時，法官謝沈智慧斥被告已違反保釋條件，明言：「再有人遲到我撤銷保釋，聽唔聽到？」</p>
 <p>本案13名被告依次為：何明軒（29歲導師）、李志斗（24歲學生）、周沛樺（21歲學生）、陳達富（26歲，無業）、何奕恆（21歲學生）、李嘉熹（24歲社工）、陳家朗（22歲學生）、吳嘉俊（38歲技術員）、許諾（20歲學生）、17歲男學生（案發時14歲）、姓鄧學生（17歲）、梁文健（23歲侍應）及陸俊恆（19歲學生）。</p>
 <p>首被告何明軒、第七被告陳家朗及第十被告17歲男學生（案發時14歲），今承認非法集結罪。何另被控的使用蒙面物品罪及管有物品意圖損壞財產罪獲存檔法庭。17歲男學生的使用蒙面物品罪亦獲存檔法庭。</p>
 <p>其餘10人均否認非法集結罪，其中李志斗承認「未能出示有效身分證明文件」罪。</p>
