--- a/_posts/2023-02-13-INMEDIA-立法會擴建採-組裝合成-三個貨櫃組成一個議辦.html
+++ b/_posts/2023-02-13-INMEDIA-立法會擴建採-組裝合成-三個貨櫃組成一個議辦.html
@@ -15,6 +15,6 @@ author: 獨媒報導
 <p>梁君彥表示，每個議員辦公室將由三個貨櫃組成，指辦公室的燈光、冷氣，和現時的辦公室有差異，但在環保及節能上會更好，行管會成員及部分議員今早已參觀「示範單位」，並感到滿意。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/J5G6N6nqyR" title="DSCF0707"><img src="https://live.staticflickr.com/65535/52685504492_a4e6f1ba80_b.jpg" width="1024" alt="DSCF0707" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/p380Pb0ppm" title="DSCF0751"><img src="https://live.staticflickr.com/65535/52686300844_40f91dded4_b.jpg" width="1024" alt="DSCF0751" /></a></p>
-<p>房屋署已完成驗收，設計及間隔與現時的議員辦公室接近。梁君彥提到，如行管會同接受示範單位的標準，承建商將在國內動工，期望在今年年尾至明年年初，完成加建四層議員辦公室。</p>
+<p>示範「單位」設計及間隔與現時的議員辦公室接近，梁君彥提到，如行管會同接受示範單位的標準，承建商將在國內動工，期望在今年年尾至明年年初，完成加建四層議員辦公室。</p>
 <p>立法會綜合大樓擴建工程在去年獲財委會通過撥款，但造價因建築署低估成本，最終款項高達約15.6億港元。梁君彥就提到，現時工程進度理想，更有少少超前，但預期會有阻滯，並要加裝牆幕、機電工程等，料在2025年年初完工。</p>
 </div></div></div>
