--- a/_posts/2023-02-14-INMEDIA-被問陳同佳能否自由行入境投案-陸委會-促港府回應司法互助請求.html
+++ b/_posts/2023-02-14-INMEDIA-被問陳同佳能否自由行入境投案-陸委會-促港府回應司法互助請求.html
@@ -9,9 +9,9 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/02141235-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>台灣宣布下周一（20日）起開放港澳人士自由行入境，並開放網絡申請簽證。至於台灣殺人案疑犯陳同佳是否可以自由行的方式申請入境，陸委會副主委梁文傑指台灣立場不變，陳同佳來台投案並非單純批出簽證的問題，還涉及雙方的司法管轄權、公權力，為確保案件的後續偵查，促港府務實回應台灣提出的司法互助請求，以落實司法正義。</p>
-<p>台灣陸委會今早舉行「開放港澳居民來台自由行」記者會，由新任副主委梁文傑主持，他指考慮到台灣疫情穩定，為推動疫後健康有秩交流，在配合疫情指揮中心的防疫規範下，下周一（20日）早上9點恢復網上辦理簽證，或到內政部移民署網站申請出入境證。</p>
+<p>台灣陸委會今早舉行「開放港澳居民來台自由行」記者會，由新任副主委梁文傑主持，他指考慮到台灣疫情穩定，為推動疫後健康有序交流，在配合疫情指揮中心的防疫規範下，下周一（20日）早上9點恢復網上辦理簽證，或到內政部移民署網站申請出入境證。</p>
 <p><strong>管浩鳴：死結在台灣不批准入境  自首意願無變</strong></p>
-<p>在記者會上，自由亞洲電台記者關注，陳同佳是否可以自由行方式入境投案。梁文傑指出，台灣的立場不變，陳同佳入境投案不是批出簽證的問題，並涉及雙方的司法管轄權、公權力，為確保案件的後續偵查，促港府務實回應台灣提出的司法互助請求，才能落實司法正義。</p>
+<p>在記者會上，自由亞洲電台記者關注陳同佳是否可以自由行方式入境投案。梁文傑指出，台灣的立場不變，陳同佳入境投案不是批出簽證的問題，並涉及雙方的司法管轄權、公權力，為確保案件的後續偵查，促港府務實回應台灣提出的司法互助請求，才能落實司法正義。</p>
 <p>一直協助陳同佳的立法會議員管浩鳴，他回覆傳媒查詢時稱：「其實問題不在於台灣是否開關，就算封關，都可向他發簽證，現時死結在台灣不批准他入境。自首意願一直無變。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/S58z42yibS" title="無標題"><img src="https://live.staticflickr.com/65535/48944920101_69746fbdfc_b.jpg" width="1024" alt="無標題" /></a><br /><em>陳同佳</em></p>
 <p><strong>開放不包括大陸旅客  陸委會指對港澳疫情較有把握</strong></p>
@@ -19,7 +19,6 @@ author: 獨媒報導
 <p>此前，港澳人士只能以「團體觀光」的方式入境台灣。梁文傑強調，要視乎對疫情的掌控程度，香港的措施及數字比較透明、開放，「其實應該要早一點，應該要早一點⋯⋯抱歉讓大家很多香港朋友沒辦法到台灣來過情人節，但是我們選擇在今天情人節作宣布，讓大家20號可以開始來作申請。」</p>
 <p>在記者會上，梁文傑再三重申，決定開放與否的標準就是對疫情的掌握程度，台灣當局對香港、澳門的疫情較有把握，但大陸則相對不確定，未來會按疫情指揮中心對疫情的判斷作處理。</p>
 <p><strong>被追問港澳居民不得從事活動  陸委會：沒有新增規定</strong></p>
-<p>另外，對於台灣移民署在年初曾公布「港澳居民不得從事活動一覽表」，禁止參與遊行及接受媒體邀請訪問等，陸委會早前澄清屬「錯誤發布」。自由亞洲電台在記者會上追問，今次開放自由行，會否對港人作類似規範。</p>
-<p>梁文傑稱，港澳人士入境台灣必須從事與旅客目的相符的活動，並遵守法律規範，但表示並沒有任何新增任何規定。</p>
+<p>另外，對於台灣移民署在年初曾公布「港澳居民不得從事活動一覽表」，禁止參與遊行及接受媒體邀請訪問等，陸委會早前澄清屬「錯誤發布」。自由亞洲電台在記者會上追問，今次開放自由行，會否對港人作類似規範。梁文傑稱，港澳人士入境台灣必須從事與旅客目的相符的活動，並遵守法律規範，但表示並沒有任何新增任何規定。</p>
 <p>至於港府在前年暫停在台灣「香港經濟貿易文化辦事處」的運作，梁文傑就表示，目前未收到港府提出重啟的請求。</p>
 </div></div></div>
